# UVAST

./: .gitignore  .rtx.toml  FIFA.py  Makefile  PE.py  _common.sh  bmvc_advanced.py  bmvc_enc_dec.py  bmvc_org.py  compute_mean_dur.py  dataloder.py  do_infers.sh  eval.py  infer_only.sh  infer_only_debug.sh  losses.py  model.py  pyproject.toml  run.py  segment_embedding.py  train.sh  transformers_models.py  utils.py  uvast_dec.py  viterbi.py
