[tool.poetry]
name = "uvast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.8"
torch = "1.10.0"
tqdm = "^4.65.0"
einops = "^0.6.1"
torchinfo = "^1.8.0"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.py$'

exclude = '''
(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.venv
    | \.idea
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
    | migrations
)
'''
